# aarushi-email-validation-api-2ec37646d-1047-4489-8859-c01a6c34e0b6

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: server.py  validate_email_service.py
